--- a/my_inventory_system/Dockerfile
+++ b/my_inventory_system/Dockerfile
@@ -1,4 +1,7 @@
-FROM ubuntu:latest
-LABEL authors="User"
-
-ENTRYPOINT ["top", "-b"]
+FROM python:3.11-slim
+WORKDIR /app
+COPY requirements.txt /app/
+RUN pip install --no-cache-dir -r requirements.txt
+COPY . /app/
+EXPOSE 8000
+CMD ["python", "django_project/manage.py", "runserver", "0.0.0.0:8000"]
